--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 
 {
-  "scripts":{
-    "start": "vite serve ./src"
-  },
+  "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+},
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
